fixed titlebar overflows

--- a/includes/globals/doe.css
+++ b/includes/globals/doe.css
@@ -99,6 +99,8 @@ main {
 	color: var(--fg1);
 	text-align: center;
 	text-shadow: 1px 1px 0 var(--dark);
+	height: 1em;
+	overflow: hidden;
 }
 
 .button {
